--- a/src/Components/Home/HomeCSS/CalltoactionSection.css
+++ b/src/Components/Home/HomeCSS/CalltoactionSection.css
@@ -5,6 +5,8 @@
 .practywiz-CTA-container {
   max-width: 1300px;
   margin: 0 auto;
+  display: flex;
+  flex-direction: column;
   background-color: #172554;
   color: white;
   padding: 2rem;
@@ -34,6 +36,7 @@
   border-radius: 4rem;
   justify-content: center;
   justify-self: center;
+  align-self: center;
   flex-wrap: wrap;
 }
 
@@ -64,6 +67,9 @@
 
 .practywiz-CTA-content {
   position: absolute;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
   width: 100%;
   transition: all 0.5s ease;
   opacity: 0;
@@ -101,6 +107,7 @@
   display: flex;
   justify-self: center;
   align-items: center;
+  align-self: center;
   justify-content: center;
   gap: 0.5rem;
   padding: 0.875rem 2rem;
