--- a/src/Components/Institute/FacultyManagement/TeacherDashboard/DashboardCSS/TeacherDahboard.css
+++ b/src/Components/Institute/FacultyManagement/TeacherDashboard/DashboardCSS/TeacherDahboard.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   min-height: 100vh;
-  background-color: #f9fafb;
+  background-color: #ffffff;
 }
 
 /* Make room for the sticky navbar when it's fixed */
